--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="description" content="Looking for kitchen remodeling near me? Create the kitchen of your dreams with our expert tips and guidance.">
     <meta name="robots" content="index, follow">
     <meta name="author" content="Author">
-    <link rel="canonical" href="https://kleinkitchenandbath.com/transform-your-space-with-kitchen-remodeling-near-me">
     <link rel="icon" href="https://kleinkitchenandbath.com/favicon.ico" type="image/x-icon">
 
     <meta property="og:title" content="Transform Your Space with Kitchen Remodeling Near Me">
@@ -174,15 +173,6 @@
 <body>
       <!-- Header Section --><header>
 <h1>Transform Your Space with Kitchen Remodeling Near Me</h1>
-        <ul>
-            <li><a href="https://kleinkitchenandbath.com/">Home</a></li>
-            <li><a href="https://kleinkitchenandbath.com/kitchen-cabinets/">Remodeling</a></li>
-            <li><a href="https://kleinkitchenandbath.com/klein-process/">Our Process</a></li>
-            <li><a href="https://kleinkitchenandbath.com/kitchen-portfolio/">Portfolio</a></li>
-            <li><a href="https://kleinkitchenandbath.com/uptown-showroom/">NYC Showroom</a></li>
-            <li><a href="https://kleinkitchenandbath.com/about-us/">About Klein</a></li>
-            <li><a href="https://kleinkitchenandbath.com/contact-us/">Contact US</a></li>
-        </ul>
     </header>
 
 <div class="container">
@@ -256,7 +246,7 @@
     </div>
        <footer>
         <ul>
-        <li>© <a href="https://kleinkitchenandbath.com/">Klein Kitchen and Bath</a> | All Rights Reserved | <a href="https://kleinkitchenandbath.com/privacy/">Privacy Policy</a></li>
+        <li>© Klein Kitchen and Bath | All Rights Reserved | Privacy Policy</li>
         </ul>
     </footer>
 </body>
